# OmeSliCC

./: .dockerignore  .gitignore  404.html  CHANGELOG.md  Dockerfile  Dockerfile_no_java  Doxyfile  LICENSE.md  Makefile  README.md  conda38omero.yml  conf.py  encode_omero_credentials.py  environment.yml  environment_linux.yml  environment_minimal.yml  environment_no_bioformats.yml  environment_no_bioformats_omero.yml  environment_omero.yml  environmentv2_3.yml  environmentv3.yml  extract_omero_labels.py  index.html  index.rst  make.bat  make_docs.bat  mkdocs.yml  objects.inv  omeslicc_env.yml  params.yml.txt  publish.bat  pyproject.toml  read_emd.ipynb  requirements.txt  run.py  run_docker.sh  run_singularity.sh  setup.cfg  sitemap.xml
OmeSliCC/: BioSource.py  GeneratorSource.py  ImageGenerator.py  OmeSource.py  OmeZarr.py  OmeZarrSource.py  Omero.py  OmeroLabelReader.py  OmeroSource.py  PlainImageSource.py  TiffSource.py  XmlDict.py  Zarr.py  ZarrSource.py  color_conversion.py  conversion.py  image_util.py  ome.py  ome_metadata.py  ome_metadata_from_input.py  ome_util.py  ome_zarr_util.py  omero_metadata.py  util.py
doc/: index.rst
docs/: Makefile  conf.py  genindex.html  index.html  index.md  index.rst  make.bat  objects.inv  overview.md  py-modindex.html  references.md  requirements.txt  searchindex.js
notes/: publishing package notes.txt
overview/: index.html
references/: index.html
resources/: omero_params.yml  params.yml  params_omero.yml  params_test.yml
search/: search_index.json
sphinx/: Makefile  conf.py  make.bat
src/: BioSlide.py  BioSource.py  (+17 more)
(+42 files in other folders)
